--- a/ML_semester3.ipynb
+++ b/ML_semester3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1431,7 @@
        "[33206 rows x 17 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1768,7 +1768,7 @@
        "[8388 rows x 16 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1786,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -2085,7 +2085,7 @@
        "max                 1.000000      1.000000  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2134,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2293,7 +2293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2487,118 +2487,120 @@
       "ValueError: n_jobs == 0 in Parallel has no meaning\n",
       "\n",
       "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1103: UserWarning: One or more of the test scores are non-finite: [0.89517207        nan        nan 0.87869335        nan 0.89291313\n",
-      " 0.88698276 0.89031372 0.87949121 0.88953973        nan        nan\n",
+      "c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\numpy\\ma\\core.py:2881: RuntimeWarning: invalid value encountered in cast\n",
+      "  _data = np.array(data, dtype=dtype, copy=copy,\n",
+      "c:\\Users\\j0rd4\\anaconda3\\envs\\no\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1103: UserWarning: One or more of the test scores are non-finite: [0.89515237        nan        nan 0.87863128        nan 0.89291313\n",
+      " 0.88693452 0.89031372 0.87941464 0.88953973        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      " 0.89515237        nan        nan 0.87863144        nan 0.89291313\n",
-      " 0.88703084 0.89031372 0.87946465 0.88953973        nan        nan\n",
-      "        nan        nan        nan 0.89517207        nan        nan\n",
-      " 0.88718934        nan 0.89291313 0.89012341 0.88986743 0.88674655\n",
+      " 0.89513285        nan        nan 0.87868257        nan 0.89291313\n",
+      " 0.88699214 0.89031372 0.87954296 0.88953973        nan        nan\n",
+      "        nan        nan        nan 0.89515237        nan        nan\n",
+      " 0.88716528        nan 0.89291313 0.89008501 0.88986743 0.88672249\n",
       " 0.88953973        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan 0.89513285        nan        nan\n",
-      " 0.8871794         nan 0.89291313 0.89014746 0.88986743 0.88676589\n",
+      "        nan        nan        nan 0.89514777        nan        nan\n",
+      " 0.88714126        nan 0.89291313 0.89016669 0.88986743 0.88674166\n",
       " 0.88953973        nan        nan        nan        nan        nan\n",
-      " 0.89517667        nan        nan 0.89012952        nan 0.89291313\n",
-      " 0.89043267 0.88954956 0.88951698 0.88953973        nan        nan\n",
+      " 0.89510876        nan        nan 0.89012952        nan 0.89291313\n",
+      " 0.89045191 0.88954956 0.88947854 0.88953973        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      " 0.89513285        nan        nan 0.89012952        nan 0.89291313\n",
-      " 0.89045209 0.88954956 0.88949776 0.88953973        nan        nan\n",
-      "        nan        nan        nan 0.8962645         nan        nan\n",
-      " 0.88195487        nan 0.89594149 0.89077448 0.8923385  0.88218711\n",
+      " 0.89510876        nan        nan 0.89014876        nan 0.89291313\n",
+      " 0.89043267 0.88954956 0.88949776 0.88953973        nan        nan\n",
+      "        nan        nan        nan 0.89620517        nan        nan\n",
+      " 0.88201938        nan 0.89594149 0.8907361  0.8923385  0.88217281\n",
       " 0.89572507        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan 0.8962891         nan        nan\n",
-      " 0.88204238        nan 0.89594149 0.89068231 0.8923385  0.88215834\n",
+      "        nan        nan        nan 0.8962842         nan        nan\n",
+      " 0.88201087        nan 0.89594149 0.89079869 0.8923385  0.88220115\n",
       " 0.89572507        nan        nan        nan        nan        nan\n",
-      " 0.89622052        nan        nan 0.89077859        nan 0.89594149\n",
-      " 0.8930573  0.89432106 0.89074502 0.89572507        nan        nan\n",
+      " 0.89624045        nan        nan 0.89080263        nan 0.89594149\n",
+      " 0.89303787 0.89432106 0.8907449  0.89572507        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      " 0.89627408        nan        nan 0.89074961        nan 0.89594149\n",
-      " 0.89303782 0.89432106 0.89074503 0.89572507        nan        nan\n",
-      "        nan        nan        nan 0.89626009        nan        nan\n",
-      " 0.89368308        nan 0.89594149 0.89292591 0.89547122 0.89375352\n",
+      " 0.89622052        nan        nan 0.89069162        nan 0.89594149\n",
+      " 0.89306202 0.89432106 0.89072582 0.89572507        nan        nan\n",
+      "        nan        nan        nan 0.89622531        nan        nan\n",
+      " 0.89363463        nan 0.89594149 0.89288696 0.89547122 0.89375834\n",
       " 0.89572507        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan 0.89625993        nan        nan\n",
-      " 0.89365886        nan 0.89594149 0.89292591 0.89547122 0.89375352\n",
+      "        nan        nan        nan 0.89622052        nan        nan\n",
+      " 0.89365886        nan 0.89594149 0.89290643 0.89547122 0.89375352\n",
       " 0.89572507        nan        nan        nan        nan        nan\n",
-      " 0.89525677        nan        nan 0.88239632        nan 0.89583881\n",
-      " 0.89108998 0.89168208 0.88231959 0.89562478        nan        nan\n",
+      " 0.89530078        nan        nan 0.88237304        nan 0.89583881\n",
+      " 0.89106014 0.89168208 0.88241034 0.89562478        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      " 0.89520214        nan        nan 0.88237779        nan 0.89583881\n",
-      " 0.89113235 0.89168208 0.88232456 0.89562478        nan        nan\n",
-      "        nan        nan        nan 0.89526121        nan        nan\n",
-      " 0.89097319        nan 0.89583881 0.89305375 0.89335327 0.89093469\n",
+      " 0.89532537        nan        nan 0.88231279        nan 0.89583881\n",
+      " 0.89115198 0.89168208 0.88230402 0.89562478        nan        nan\n",
+      "        nan        nan        nan 0.89530117        nan        nan\n",
+      " 0.8909927         nan 0.89583881 0.89299056 0.89335327 0.89093452\n",
       " 0.89562478        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan 0.89526611        nan        nan\n",
-      " 0.89097336        nan 0.89583881 0.89302984 0.89335327 0.89095402\n",
+      "        nan        nan        nan 0.89526157        nan        nan\n",
+      " 0.89101203        nan 0.89583881 0.89302965 0.89335327 0.89093452\n",
       " 0.89562478        nan        nan        nan        nan        nan\n",
-      " 0.89523704        nan        nan 0.89372156        nan 0.89583881\n",
-      " 0.8935666  0.89522199 0.8936783  0.89562478        nan        nan\n",
+      " 0.89528096        nan        nan 0.89373657        nan 0.89583881\n",
+      " 0.89357125 0.89522199 0.89372653 0.89562478        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      " 0.89528579        nan        nan 0.89376081        nan 0.89583881\n",
-      " 0.89352745 0.89522199 0.89372667 0.89562478        nan        nan\n",
-      "        nan        nan        nan 0.89518349        nan        nan\n",
-      " 0.88241926        nan 0.8953986  0.89110361 0.89283812 0.88238572\n",
+      " 0.89526118        nan        nan 0.89374118        nan 0.89583881\n",
+      " 0.89357144 0.89522199 0.89372652 0.89562478        nan        nan\n",
+      "        nan        nan        nan 0.8951636         nan        nan\n",
+      " 0.88239147        nan 0.8953986  0.89108002 0.89283812 0.88238253\n",
       " 0.89531548        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan 0.89514401        nan        nan\n",
-      " 0.88236123        nan 0.8953986  0.8911322  0.89283812 0.88234719\n",
+      "        nan        nan        nan 0.89513489        nan        nan\n",
+      " 0.88243064        nan 0.8953986  0.89112855 0.89283812 0.88249122\n",
       " 0.89531548        nan        nan        nan        nan        nan\n",
-      " 0.89515935        nan        nan 0.89101221        nan 0.8953986\n",
-      " 0.89311213 0.89302459 0.89104123 0.89531548        nan        nan\n",
+      " 0.89515447        nan        nan 0.89106057        nan 0.8953986\n",
+      " 0.89315106 0.89302459 0.89109424 0.89531548        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      " 0.89525231        nan        nan 0.89109454        nan 0.8953986\n",
-      " 0.89315106 0.89302459 0.89110863 0.89531548        nan        nan\n",
-      "        nan        nan        nan 0.89511976        nan        nan\n",
-      " 0.89366913        nan 0.8953986  0.89360564 0.89525148 0.89367842\n",
+      " 0.89513475        nan        nan 0.89106966        nan 0.8953986\n",
+      " 0.89313159 0.89302459 0.89105575 0.89531548        nan        nan\n",
+      "        nan        nan        nan 0.89524302        nan        nan\n",
+      " 0.8936254         nan 0.8953986  0.89360564 0.89525148 0.89364948\n",
       " 0.89531548        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan 0.89511506        nan        nan\n",
-      " 0.89364489        nan 0.8953986  0.89362987 0.89525148 0.89367837\n",
+      "        nan        nan        nan 0.89518825        nan        nan\n",
+      " 0.89368361        nan 0.8953986  0.89360564 0.89525148 0.8936254\n",
       " 0.89531548        nan        nan        nan        nan        nan\n",
-      " 0.89520344        nan        nan 0.88242478        nan 0.89540974\n",
-      " 0.89115743 0.89247041 0.88240949 0.89531261        nan        nan\n",
+      " 0.89513001        nan        nan 0.88243998        nan 0.89540974\n",
+      " 0.89110376 0.89247041 0.88244818 0.89531261        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      " 0.89517418        nan        nan 0.88240617        nan 0.89540974\n",
-      " 0.89109908 0.89247041 0.8823804  0.89531261        nan        nan\n",
-      "        nan        nan        nan 0.89517294        nan        nan\n",
-      " 0.89107974        nan 0.89540974 0.89311213 0.89303851 0.8910557\n",
+      " 0.89515936        nan        nan 0.88241872        nan 0.89540974\n",
+      " 0.89105995 0.89247041 0.88248123 0.89531261        nan        nan\n",
+      "        nan        nan        nan 0.89517894        nan        nan\n",
+      " 0.8910604         nan 0.89540974 0.89315106 0.89303851 0.89109923\n",
       " 0.89531261        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      "        nan        nan        nan 0.89515936        nan        nan\n",
-      " 0.89106056        nan 0.89540974 0.89313159 0.89303851 0.89106056\n",
+      "        nan        nan        nan 0.8952231         nan        nan\n",
+      " 0.89107489        nan 0.89540974 0.89313159 0.89303851 0.89103635\n",
       " 0.89531261        nan        nan        nan        nan        nan\n",
-      " 0.89518789        nan        nan 0.89360581        nan 0.89540974\n",
-      " 0.89360561 0.89435799 0.89364954 0.89531261        nan        nan\n",
+      " 0.89515924        nan        nan 0.89369326        nan 0.89540974\n",
+      " 0.8935861  0.89435799 0.89362559 0.89531261        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
       "        nan        nan        nan        nan        nan        nan\n",
-      " 0.89511978        nan        nan 0.89364499        nan 0.89540974\n",
-      " 0.8935861  0.89435799 0.89366907 0.89531261        nan        nan\n",
+      " 0.89506614        nan        nan 0.89366913        nan 0.89540974\n",
+      " 0.8935861  0.89435799 0.89371734 0.89531261        nan        nan\n",
       "        nan        nan        nan]\n",
       "  warnings.warn(\n"
      ]
@@ -2659,7 +2661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
