--- a/ML_semester3 - Copy.ipynb
+++ b/ML_semester3 - Copy.ipynb
@@ -2720,7 +2720,9 @@
    "source": [
     "Met logistic regression kun je de kans van een binair resultaat, dus bijvoorbeeld waar of niet waar, bepalen op basis van één of meer voorspellende variabelen met behulp van een logistische functie.\n",
     "\n",
-    "Als tweede moet je de data splitsen in train en test sets, voordat je uberhaupt iets kan doen. Als tweede moet je LogisticRegression importeren van sklearn.model_selection, dan moet je logistic regression 'initiaten' met LogisticRegression() te gebruiken, dan moet je het model opde train set fitten met logreg.fit(X_train, y_train). ALs vijfde moet je een prediction doen op de test set met predict(), voorbeeld: logreg.predict(X_test). Als laatste moet je het model scoren op een bepaalde metric, voor dit model is de f1-score gekozen, omdat het een gemiddelde is tussen precision en recall."
+    "Als tweede moet je de data splitsen in train en test sets, voordat je uberhaupt iets kan doen. Als tweede moet je LogisticRegression importeren van sklearn.model_selection, dan moet je logistic regression 'initiaten' met LogisticRegression() te gebruiken, dan moet je het model opde train set fitten met logreg.fit(X_train, y_train). ALs vijfde moet je een prediction doen op de test set met predict(), voorbeeld: logreg.predict(X_test). Als laatste moet je het model scoren op een bepaalde metric, voor dit model is de f1-score gekozen, omdat het een gemiddelde is tussen precision en recall.\n",
+    "\n",
+    "Ibm. (2024, October 3). Logistic Regression. What Is Logistic Regression? https://www.ibm.com/topics/logistic-regression"
    ]
   },
   {
@@ -2746,7 +2748,9 @@
     "In deze functie:\n",
     "- n het aantal voobeelden in je dataset.\n",
     "- yi het werkelijke label van het i-de datapunt (0 of 1).\n",
-    "- y met het dakje de voorspelde kans."
+    "- y met het dakje de voorspelde kans.\n",
+    "\n",
+    "Shipra_Saxena. (2024, October 10). Binary Cross Entropy/Log loss for binary classification. Analytics Vidhya. https://www.analyticsvidhya.com/blog/2021/03/binary-cross-entropy-log-loss-for-binary-classification/"
    ]
   },
   {
@@ -2791,7 +2795,9 @@
     "Formule:\n",
     "\n",
     "![image-2.png](attachment:image-2.png)\n",
-    "- elasticnet: Elasticnet is een combinatie van L1 en L2"
+    "- elasticnet: Elasticnet is een combinatie van L1 en L2\n",
+    "\n",
+    "Rithp. (2023, January 5). Logistic Regression and regularization: Avoiding overfitting and improving generalization. Medium. https://medium.com/@rithpansanga/logistic-regression-and-regularization-avoiding-overfitting-and-improving-generalization-e9afdcddd09d"
    ]
   },
   {
@@ -3781,7 +3787,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "XGBoost is praktisch hetzelfde concept als Gradient Boosting, maar gebruikt verschillende optimalisaties voor snellere training en betere prestaties (het is een specifieke implementatie hiervan). Voorbeelden hiervan zijn: \n",
+    "\n",
+    "-Regularisatie: XGBoost kan gebruik maken van L1 en L2 regularisatie om overfitting te voorkomen. Gradient boosting heeft geen ingebouwde regularisatie.\n",
+    "-Parallel trainen: XGBoost ondersteunt het parallel trainen van het model wat het trainingsproces versnelt ten opzichte van standaard Gradient Boosting.\n",
+    "-Tree Pruning: Ook XGBoost maakt gebruik van prenuning, net zoals Gradient Boosting. Denk hierbij aan max_depth etc.\n",
+    "\n",
+    "Al deze optimalisaties zijn ingebouwd bij XGBoost, wat bij Gradient Boosting niet het geval is. \n",
+    "\n",
+    "XGBoost Documentation — xgboost 2.1.1 documentation. (n.d.). https://xgboost.readthedocs.io/en/stable/"
+   ]
   },
   {
    "cell_type": "markdown",
