final sources fixed + html update

--- a/ML_semester3 - Copy.ipynb
+++ b/ML_semester3 - Copy.ipynb
@@ -1908,7 +1908,7 @@
     "\n",
     "Het kiest een willekeurig voorbeeld uit de minderheids klasse en zoekt dan binnen een bepaalde K waarde naar de 'nearest neighbours'. Het kiest vervolgens een willekeurige uit deze selectie en plaatst een data punt hiertussen. Zo probeert het zo werkelijk mogelijke data aan te maken.\n",
     "\n",
-    "https://machinelearningmastery.com/smote-oversampling-for-imbalanced-classification/"
+    "Brownlee, J. (2021, March 16). SMOTE for Imbalanced Classification with Python. MachineLearningMastery.com. https://machinelearningmastery.com/smote-oversampling-for-imbalanced-classification/"
    ]
   },
   {
@@ -1939,7 +1939,7 @@
    "source": [
     "ADASYN of Adaptive Synthetic Sampling, is een oversampling techniek waar synthetische data wordt aangemaakt op basis van al bestaande data. ADASYN doet dit met behulp van het berekenen van dichtheidsverdeling van de minderheids klassen en genereerd dan data op basis hiervan.\n",
     "\n",
-    "https://www.activeloop.ai/resources/glossary/adaptive-synthetic-sampling-adasyn/"
+    "What is Adaptive Synthetic Sampling (ADASYN). (n.d.). https://www.activeloop.ai/resources/glossary/adaptive-synthetic-sampling-adasyn/"
    ]
   },
   {
@@ -1972,7 +1972,7 @@
     "\n",
     "Dit werkt beter voor SVMs\n",
     "\n",
-    "https://towardsdatascience.com/instance-hardness-threshold-an-undersampling-method-to-tackle-imbalanced-classification-problems-6d80f91f0581"
+    "Sisters, L. (2022, March 30). Instance hardness threshold: an undersampling method to tackle imbalanced classification problems. Medium. https://towardsdatascience.com/instance-hardness-threshold-an-undersampling-method-to-tackle-imbalanced-classification-problems-6d80f91f0581"
    ]
   },
   {
@@ -2158,7 +2158,7 @@
    "source": [
     "Standaardiseren van de data zorgt ervoor dat de schaal overal gelijk is. Dit zorgt ervoor dat een kolom met een andere schaal niet veel te veel of veel te weinig invloed heeft op het model. Dit is vooral belangrijk voor afstandgebasseerde algoritmes zoals k-NN en SVM die we hier gebruiken. Voor Tree gebaseerde modellen of categorische variabelen is dit vaak niet nodig.\n",
     "\n",
-    "https://builtin.com/data-science/when-and-why-standardize-your-data"
+    "Jaadi, Z. (2023, August 4). When and why to standardize your data. Built In. https://builtin.com/data-science/when-and-why-standardize-your-data"
    ]
   },
   {
