sampling methodes aangepast, overall cleanup

--- a/ML_semester3 - Copy.ipynb
+++ b/ML_semester3 - Copy.ipynb
@@ -1470,7 +1470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We hebben gezien dat de dataset erg unbalanced is maar dat de dataset verder redelijk normaal is verdeeld. We hebben een paar zware outliers bij BMI gevonden en hoeveel deze misschien in werklijkheid wel kunnen zijn deze sterk genoeg om te verwijderen. Verder is er een probleem met multicollineariteit, er zullen hier rijen verwijderd worden."
+    "We hebben gezien dat de dataset erg unbalanced is maar dat de dataset verder redelijk normaal is verdeeld. We hebben een paar zware outliers bij BMI gevonden en hoeveel deze misschien in werklijkheid wel kunnen zijn deze sterk genoeg om te verwijderen. Verder is er een probleem met multicollineariteit, er zullen hier kolommen verwijderd worden."
    ]
   },
   {
@@ -1894,6 +1894,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = train.drop(columns=['stroke'])\n",
+    "y = train['stroke']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1917,13 +1927,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#X = train.drop(columns=['stroke'])\n",
-    "#y = train['stroke']\n",
-    "#\n",
-    "#smote = SMOTE(random_state=42)\n",
-    "#X_resampled, y_resampled = smote.fit_resample(X, y)\n",
-    "#\n",
-    "#print(y_resampled.value_counts())\n"
+    "\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_smote, y_smote = smote.fit_resample(X, y)\n",
+    "\n",
+    "print(y_smote.value_counts())\n"
    ]
   },
   {
@@ -1948,13 +1956,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#X = train.drop(columns=['stroke'])\n",
-    "#y = train['stroke']\n",
-    "#\n",
-    "#adasyn = ADASYN(random_state=42)\n",
-    "#X_resampled, y_resampled = adasyn.fit_resample(X, y)\n",
-    "#\n",
-    "#print(y_resampled.value_counts())"
+    "adasyn = ADASYN(random_state=42)\n",
+    "X_adasyn, y_adasyn = adasyn.fit_resample(X, y)\n",
+    "\n",
+    "print(y_adasyn.value_counts())"
    ]
   },
   {
@@ -1992,157 +1997,10 @@
     }
    ],
    "source": [
-    "X = train.drop(columns=['stroke'])\n",
-    "y = train['stroke']\n",
-    "\n",
     "iht = InstanceHardnessThreshold(random_state=42, n_jobs=-1)\n",
-    "X_resampled, y_resampled = iht.fit_resample(X, y)\n",
+    "X_iht, y_iht = iht.fit_resample(X, y)\n",
     "\n",
-    "print(y_resampled.value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>hypertension</th>\n",
-       "      <th>heart_disease</th>\n",
-       "      <th>avg_glucose_level</th>\n",
-       "      <th>bmi</th>\n",
-       "      <th>stroke</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>22226.000000</td>\n",
-       "      <td>22226.000000</td>\n",
-       "      <td>22226.000000</td>\n",
-       "      <td>22226.000000</td>\n",
-       "      <td>22226.000000</td>\n",
-       "      <td>22226.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>32.554551</td>\n",
-       "      <td>0.031720</td>\n",
-       "      <td>0.008908</td>\n",
-       "      <td>95.725841</td>\n",
-       "      <td>27.175772</td>\n",
-       "      <td>0.023171</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>19.616482</td>\n",
-       "      <td>0.175257</td>\n",
-       "      <td>0.093966</td>\n",
-       "      <td>30.514191</td>\n",
-       "      <td>7.174589</td>\n",
-       "      <td>0.150450</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.080000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>55.010000</td>\n",
-       "      <td>10.300000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>17.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>77.062500</td>\n",
-       "      <td>22.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>32.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>89.595000</td>\n",
-       "      <td>26.500000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>47.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>105.520000</td>\n",
-       "      <td>31.600000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>82.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>278.560000</td>\n",
-       "      <td>51.900000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                age  hypertension  heart_disease  avg_glucose_level  \\\n",
-       "count  22226.000000  22226.000000   22226.000000       22226.000000   \n",
-       "mean      32.554551      0.031720       0.008908          95.725841   \n",
-       "std       19.616482      0.175257       0.093966          30.514191   \n",
-       "min        0.080000      0.000000       0.000000          55.010000   \n",
-       "25%       17.000000      0.000000       0.000000          77.062500   \n",
-       "50%       32.000000      0.000000       0.000000          89.595000   \n",
-       "75%       47.000000      0.000000       0.000000         105.520000   \n",
-       "max       82.000000      1.000000       1.000000         278.560000   \n",
-       "\n",
-       "                bmi        stroke  \n",
-       "count  22226.000000  22226.000000  \n",
-       "mean      27.175772      0.023171  \n",
-       "std        7.174589      0.150450  \n",
-       "min       10.300000      0.000000  \n",
-       "25%       22.000000      0.000000  \n",
-       "50%       26.500000      0.000000  \n",
-       "75%       31.600000      0.000000  \n",
-       "max       51.900000      1.000000  "
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resampled_train = pd.DataFrame(X_resampled, columns=X.columns)\n",
-    "resampled_train['stroke'] = y_resampled\n",
-    "resampled_train.describe()\n"
+    "print(y_iht.value_counts())"
    ]
   },
   {
@@ -2169,7 +2027,9 @@
    "source": [
     "sc = StandardScaler()\n",
     "\n",
-    "X_resampled = sc.fit_transform(X_resampled) "
+    "X_smote_sc = sc.fit_transform(X_smote)\n",
+    "X_adasyn_sc = sc.fit_transform(X_adasyn) \n",
+    "X_ith_sc = sc.fit_transform(X_iht) "
    ]
   },
   {
@@ -2236,27 +2096,15 @@
     }
    ],
    "source": [
-    "# Import train_test_split function\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn import svm\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_ith_sc, y_iht, test_size=0.3,random_state=42) # 70% training and 30% test\n",
     "\n",
-    "# Split dataset into training set and test set\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.3,random_state=42) # 70% training and 30% test\n",
+    "svm = svm.SVC(kernel='rbf', C=100)\n",
     "\n",
-    "#Create a svm Classifier\n",
-    "clf = svm.SVC(kernel='rbf', C=100)\n",
+    "svm.fit(X_train, y_train)\n",
     "\n",
-    "#Train the model using the training sets\n",
-    "clf.fit(X_train, y_train)\n",
+    "y_pred = svm.predict(X_test)\n",
     "\n",
-    "#Predict the response for test dataset\n",
-    "y_pred = clf.predict(X_test)\n",
     "\n",
-    "#Import scikit-learn metrics module for accuracy calculation\n",
-    "from sklearn import metrics\n",
-    "\n",
-    "# Model Accuracy: how often is the classifier correct?\n",
     "print(\"F1 score:\",metrics.f1_score(y_test, y_pred))\n",
     "\n",
     "print(classification_report(y_test, y_pred))"
